Fix spacing

--- a/assets/less/components/listing.less
+++ b/assets/less/components/listing.less
@@ -11,6 +11,6 @@
     }
 }
 
-.listing-item p:last-of-type {
-    @apply .mb-0;
-}
+// .listing-item p:last-of-type {
+//     @apply .mb-0;
+// }
